--- a/recipes-multimedia/v4l2apps/v4l-gst/libv4l-gst.conf
+++ b/recipes-multimedia/v4l2apps/v4l-gst/libv4l-gst.conf
@@ -1,3 +1,3 @@
 [libv4l-gst]
-pipeline=h264parse ! omxh264dec ! queue max-size-bytes=0 max-size-time=0 max-size-buffers=0 ! vspfilter output-io-mode=0
+pipeline=h264parse ! omxh264dec no-reorder=true ! queue max-size-bytes=0 max-size-time=0 max-size-buffers=0 ! vspfilter output-io-mode=0
 min-buffers=2
